send attachments
