# internal/application/requestprocessor/requestprocessor.go
@@ -3,22 +3,25 @@ package requestprocessor
 import (
 	"context"
 
+	"github.com/LakeevSergey/mailer/internal/domain/attachmentmanager"
 	"github.com/LakeevSergey/mailer/internal/domain/entity"
 )
 
 type SendMailRequestProcessor struct {
-	storager        TemplateStorager
-	builder         MailBuilder
-	sender          MailSender
-	defaultSendFrom entity.SendFrom
+	storager          TemplateStorager
+	builder           MailBuilder
+	sender            MailSender
+	attachmentManager attachmentmanager.AttachmentManager
+	defaultSendFrom   entity.SendFrom
 }
 
-func NewSendMailRequestProcessor(storager TemplateStorager, builder MailBuilder, sender MailSender, defaultSendFrom entity.SendFrom) *SendMailRequestProcessor {
+func NewSendMailRequestProcessor(storager TemplateStorager, builder MailBuilder, sender MailSender, attachmentManager attachmentmanager.AttachmentManager, defaultSendFrom entity.SendFrom) *SendMailRequestProcessor {
 	return &SendMailRequestProcessor{
-		storager:        storager,
-		builder:         builder,
-		sender:          sender,
-		defaultSendFrom: defaultSendFrom,
+		storager:          storager,
+		builder:           builder,
+		sender:            sender,
+		attachmentManager: attachmentManager,
+		defaultSendFrom:   defaultSendFrom,
 	}
 }
 
@@ -46,11 +49,23 @@ func (p *SendMailRequestProcessor) Process(ctx context.Context, sendMail entity.
 		}
 	}
 
+	attachments := make([]entity.File, 0, len(sendMail.Attachments))
+	for _, fileId := range sendMail.Attachments {
+		file, err := p.attachmentManager.Get(ctx, fileId)
+		if err != nil {
+			return err
+		}
+		file.Data.Close()
+
+		attachments = append(attachments, file)
+	}
+
 	mail := entity.Mail{
-		SendTo:   sendMail.SendTo,
-		SendFrom: sendFrom,
-		Title:    title,
-		Body:     body,
+		SendTo:      sendMail.SendTo,
+		SendFrom:    sendFrom,
+		Title:       title,
+		Body:        body,
+		Attachments: attachments,
 	}
 
 	return p.sender.Send(mail)
